--- a/content/WEEK17.html
+++ b/content/WEEK17.html
@@ -133,34 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">FANUC_M710iC_50 機械手臂Remote Api << <a href='FANUC_M710iC_50 機械手臂Remote Api.html'>Previous</a> <a href='week15.html'>Next</a> >> week15<br /><h1>week14</h1>
-<p>創造第二個雲端 Gitlab(第二次備份)</p>
-<h4>Gitlab 同步</h4>
-<p>要利用 Gitlab 同步位於 Github 上的 CMSiMDE 倉儲與 Github Pages 網頁, 需要注意以下兩個要點:</p>
-<ol>
-<li>完成<span>   </span><span> </span>帳號申請與驗證.</li>
-<li>在原先 Github 倉儲中增加一個 .gitlab-ci.yml 檔案, 目的是用來產生與倉儲對應的 Gitlab Pages 網站.</li>
-</ol>
-<p>step1. 申請帳號</p>
-<p><img alt="" height="338" src="./../images/gitlab1.jpg" width="565"/></p>
-<p>step2. 設定(記得設為Private)</p>
-<p></p>
-<p><img alt="" height="549" src="./../images/gitlab2.jpg" width="574"/></p>
-<p>step3. 把github的資料推到Gitlab上面</p>
-<p><img alt="" height="142" src="./../images/gitlab3.jpg" width="571"/></p>
-<p></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">Y:\&gt;G:
-
-G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2&gt;cd data
-
-G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data&gt;cd tmp
-
-G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp&gt;cd cd2021
-
-G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitlab
-</pre>
-<p></p>
-<br />FANUC_M710iC_50 機械手臂Remote Api << <a href='FANUC_M710iC_50 機械手臂Remote Api.html'>Previous</a> <a href='week15.html'>Next</a> >> week15</div>
+    <div id="tipue_search_content">Fossil << <a href='Fossil.html'>Previous</a> <a href='W16.html'>Next</a> >> W16<br /><h1>WEEK17</h1>
+<br />Fossil << <a href='Fossil.html'>Previous</a> <a href='W16.html'>Next</a> >> W16</div>
         
     <!-- footer -->
       <div class="container">
