--- a/config/content.htm
+++ b/config/content.htm
@@ -601,7 +601,7 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <p><img alt="" height="292" src="/images/cmd_0ikTvGyyWk.png" width="571"/></p>
 <p><img alt="" height="291" src="/images/cmd_6WMKL3fgy4.png" width="569"/></p>
 <h2>WEEK17</h2>
-<h3>W16</h3>
+<h3>w16</h3>
 <h4>(1) Onshape 繪製出機械手臂零件</h4>
 <p>     圖檔連結: <a href="https://cad.onshape.com/documents/9e9721534d87945d078e4850/w/464ee86b33b85ab5e7454fd3/e/8103231299b57ea049310546">請點我</a></p>
 <p></p>
@@ -1134,7 +1134,6 @@ if clientID != -1:
 else:
     print ('Failed connecting to remote API server')
     print ('End')
-</pre>
-<h3>心得</h3>
+</pre><h3>心得</h3>
 <p>心得: 這學期採取分組，比較像外面上班一起分工合作，共同完成一項作業，這是一項非常有效率且不會太累的模式，這學期教得像Remote Api 模擬自走車，自己設路徑給他走甚至是機械手臂都是以前沒碰過，還有像端遙控(remote api)有點不可思議，雖然一開始很難，但當自己成功做出來時會覺得非常有成就感，感覺很帥，沒想到一些簡單的網路程式，竟然可以帶給我無法想像的境界，含有老師的觀念方向，都讓我有一些新的想法，明知不可為而偏為之，但是如果不去試，人類怎麼會進步，我又怎麼知道自己的極限到底在哪裡</p>
 <p></p>
