--- a/content/w16.html
+++ b/content/w16.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li class='has-children'><a href='week13.html'>week13</a><ul class='dropdown'><li><a href='RoboDK.html'>RoboDK</a><li><a href='FANUC_M710iC_50 機械手臂Remote Api.html'>FANUC_M710iC_50 機械手臂Remote Api</a></li></ul><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a></li></ul><li class='has-children'><a href='WEEK17.html'>WEEK17</a><ul class='dropdown'><li><a href='W16.html'>W16</a><li><a href='心得.html'>心得</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li></ul><li class='has-children'><a href='week12.html'>week12</a><ul class='dropdown'><li><a href='topic.html'>topic</a><li><a href='影片直播.html'>影片直播</a></li></ul><li class='has-children'><a href='week13.html'>week13</a><ul class='dropdown'><li><a href='RoboDK.html'>RoboDK</a><li><a href='FANUC_M710iC_50 機械手臂Remote Api.html'>FANUC_M710iC_50 機械手臂Remote Api</a></li></ul><li><a href='week14.html'>week14</a><li class='has-children'><a href='week15.html'>week15</a><ul class='dropdown'><li><a href='part 1-joint.html'>part 1-joint</a><li><a href='part 2-joint.html'>part 2-joint</a></li></ul><li class='has-children'><a href='week16.html'>week16</a><ul class='dropdown'><li><a href='Fossil.html'>Fossil</a></li></ul><li class='has-children'><a href='WEEK17.html'>WEEK17</a><ul class='dropdown'><li><a href='w16.html'>w16</a><li><a href='心得.html'>心得</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">WEEK17 << <a href='WEEK17.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>W16</h1>
+    <div id="tipue_search_content">WEEK17 << <a href='WEEK17.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>w16</h1>
 <h4>(1) Onshape 繪製出機械手臂零件</h4>
 <p>     圖檔連結: <a href="https://cad.onshape.com/documents/9e9721534d87945d078e4850/w/464ee86b33b85ab5e7454fd3/e/8103231299b57ea049310546">請點我</a></p>
 <p></p>
@@ -666,8 +666,7 @@ if clientID != -1:
 else:
     print ('Failed connecting to remote API server')
     print ('End')
-</pre>
-<br />WEEK17 << <a href='WEEK17.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
+</pre><br />WEEK17 << <a href='WEEK17.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</div>
         
     <!-- footer -->
       <div class="container">
