--- a/content/week15.html
+++ b/content/week15.html
@@ -135,7 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">week14 << <a href='week14.html'>Previous</a> <a href='part 1-joint.html'>Next</a> >> part 1-joint<br /><h1>week15</h1>
 <p></p>
-<br />week14 << <a href='week14.html'>Previous</a> <a href='part 1-joint.html'>Next</a> >> part 1-joint</div>
+<p><img alt="" height="332" src="./../images/123456789.jpg" width="579"/></p><br />week14 << <a href='week14.html'>Previous</a> <a href='part 1-joint.html'>Next</a> >> part 1-joint</div>
         
     <!-- footer -->
       <div class="container">
