--- a/config/content.htm
+++ b/config/content.htm
@@ -84,7 +84,10 @@ git add .
 git commit -m %message%
 git push</pre>
 <p><img alt="" height="288" src="/images/螢幕擷取畫面 2.png" width="554"/></p>
-<p><span></span></p>
+<p></p>
+<p></p>
+<h1>ssh</h1>
+<p><a href="https://40823111.github.io/wcm2020/content/%E5%8A%A0%E5%85%A5ssh.html">ssh教學</a></p>
 <p></p>
 <h1>stage1</h1>
 <h2>week1</h2>
@@ -437,7 +440,8 @@ G:\cd2021\kmol2021_spring_v2\kmol2021_spring_v2\data\tmp\cd2021&gt;git push gitl
 <p></p>
 <h2>week15</h2>
 <p></p>
-<p><img alt="" height="332" src="/images/123456789.jpg" width="579"/></p><h3>part 1-joint</h3>
+<p><img alt="" height="332" src="/images/123456789.jpg" width="579"/></p>
+<h3>part 1-joint</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IKOGwoJ2HLk" title="YouTube video player" width="560"></iframe></p>
 <p>We saw this simple two-link robot in the previous lecture about forward kinematics.</p>
 <p>我們在上一堂關於正向運動學的講座中看到了這個簡單的雙連桿機器人</p>
@@ -1134,6 +1138,7 @@ if clientID != -1:
 else:
     print ('Failed connecting to remote API server')
     print ('End')
-</pre><h3>心得</h3>
+</pre>
+<h3>心得</h3>
 <p>心得: 這學期採取分組，比較像外面上班一起分工合作，共同完成一項作業，這是一項非常有效率且不會太累的模式，這學期教得像Remote Api 模擬自走車，自己設路徑給他走甚至是機械手臂都是以前沒碰過，還有像端遙控(remote api)有點不可思議，雖然一開始很難，但當自己成功做出來時會覺得非常有成就感，感覺很帥，沒想到一些簡單的網路程式，竟然可以帶給我無法想像的境界，含有老師的觀念方向，都讓我有一些新的想法，明知不可為而偏為之，但是如果不去試，人類怎麼會進步，我又怎麼知道自己的極限到底在哪裡</p>
 <p></p>
