--- a/config/content.htm
+++ b/config/content.htm
@@ -129,7 +129,8 @@ git push</pre>
 <p></p>
 <p>3.完成品</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
-<h1>stage2</h1>
+<p>檔案下載</p>
+<p><a href="https://github.com/40823111/cd2021/blob/main/remote%20api/%E6%AD%A3%E5%BC%8F%E7%89%881.ttt">正式版1.ttt</a></p><h1>stage2</h1>
 <h2>week5</h2>
 <p>step2 題目 : 自動打球機及手動接球</p>
 <p>設計 自動送球機構 及 接球手套 機械手臂打球(打者) 和 手動機械手臂接球(防守者)</p>
