網頁出問題測試

--- a/content/ssh.html
+++ b/content/ssh.html
@@ -133,8 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task3 << <a href='task3.html'>Previous</a> <a href='topic.html'>Next</a> >> topic<br /><h1>week12</h1>
-<br />task3 << <a href='task3.html'>Previous</a> <a href='topic.html'>Next</a> >> topic</div>
+    <div id="tipue_search_content">repositories create << <a href='repositories create.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1<br /><h1>ssh</h1>
+<p><a href="https://40823111.github.io/wcm2020/content/%E5%8A%A0%E5%85%A5ssh.html">ssh教學</a></p>
+<p></p>
+<br />repositories create << <a href='repositories create.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
       <div class="container">
