--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1147,18 +1147,19 @@ else:
 <p>stage3-ag5 資料統整</p>
 <p></p>
 <p>這物專案我們是以組員<a href="https://40823139.github.io/cd2021/content/index.html">40823139 </a>來改良為主，<span>我們和stage2不同的是把原本複雜的程式縮減成用dummy只要控制 可以大大減少coppliasim 的複雜度</span></p>
-<p><span>場景下載</span></p>
+<p><span>場景下載   </span><a href="https://github.com/40823111/cd2021/blob/main/remote%20api/stage3 final.ttt">Stage3-ag1-module.ttt</a> (場景提供 組員40823139)</p>
 <p></p>
+<p>解說</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/B7HNe7f9VNk" title="YouTube video player" width="560"></iframe></p>
 <p>改良後 最終成品</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1kpNmqqGyGI" title="YouTube video player" width="560"></iframe></p>
 <p>這物專案我們是以組員40823139 來改良為主，<span>我們和stage2不同的是把原本複雜的程式縮減成用dummy只要控制 可以大大減少coppliasim 的複雜度</span></p>
 <p></p>
-<p>改良前</p>
+<p>改良前 (原本有很多複雜的程式)</p>
 <p><img alt="" height="328" src="/images/old.jpg" width="583"/></p>
 <p></p>
-<p>改良後</p>
+<p>改良後 (我們把它用dummy取代)</p>
 <p><img alt="" height="320" src="/images/new.jpg" width="569"/></p>
-<p>我們和stage2不同的是把原本複雜的程式縮減成用dummy只要控制 可以大大減少coppliasim 的複雜度</p>
 <p></p>
 <p>手臂程式</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">-- This is a threaded script, and is just an example!
